<resources>
    <string name="app_name">Money Sack</string>
    <string name="my_balance">My Balance</string>
    <string name="profile">Profile</string>
    <string name="notification_icon">Notification</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="scan">Scan</string>
    <string name="expenses">Expenses</string>
    <string name="savings">Savings</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>

    <string-array name="categoryList">
        <item>Select Item</item>
        <item>Food &amp; Beverages</item>
        <item>Utilities</item>
        <item>Health Care</item>
        <item>Others</item>
    </string-array>

    <string-array name="IncomeCategory">
        <item>Select Item</item>
        <item>Salary</item>
        <item>Freelance</item>
        <item>Investments</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>